<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom|top"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/RoomNO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Room" />

    <EditText
        android:id="@+id/RoomET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/bed2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bed" />

    <EditText
        android:id="@+id/BedET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/SearchBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:onClick="onClick"
        android:text="@string/SearchTV" />

</LinearLayout>
